--- a/SRC/Eau.html
+++ b/SRC/Eau.html
@@ -50,67 +50,67 @@
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Psamathe_Icon.png" /></a>
+            <a><img class="efrei" title="PSAMATHE" src="../image/Monstres/Eau/Psamathe_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Alicia_Icon.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Beth_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Sigmarus_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Theomars_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Julie_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Lapis_Icon.png" /></a>
-
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Xiao_Lin_Icon.png" /></a>
+            <a><img class="efrei" title="ALICIA" src="../image/Monstres/Eau/Alicia_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Sabrina.png" /></a>
+            <a><img class="efrei" title="BETH" src="../image/Monstres/Eau/Beth_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="SIGMARUS" src="../image/Monstres/Eau/Sigmarus_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="THEOMARS" src="../image/Monstres/Eau/Theomars_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="JULIE" src="../image/Monstres/Eau/Julie_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="LAPIS" src="../image/Monstres/Eau/Lapis_Icon.png" /></a>
+
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="XIAO LIN" src="../image/Monstres/Eau/Xiao_Lin_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Talia.png" /></a>
+            <a><img class="efrei" title="SABRINA" src="../image/Monstres/Eau/Sabrina.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Mina_Icon.png" /></a>
+            <a><img class="efrei" title="TALIA" src="../image/Monstres/Eau/Talia.png" /></a>
+
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Tarq_Icon.png" /></a>
+            <a><img class="efrei" title="MINA" src="../image/Monstres/Eau/Mina_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="TARQ" src="../image/Monstres/Eau/Tarq_Icon.png" /></a>
 
         </div>
 
@@ -125,34 +125,34 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Chow_Icon.png" /></a>
+            <a><img class="efrei" title="CHOW" src="../image/Monstres/Eau/Chow_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Camille_Icon.png" /></a>
+            <a><img class="efrei" title="CAMILLE" src="../image/Monstres/Eau/Camille_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Chandra_Icon.png" /></a>
+            <a><img class="efrei" title="CHANDRA" src="../image/Monstres/Eau/Chandra_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Mo_Long_Icon.png" /></a>
+            <a><img class="efrei" title="MO LONG" src="../image/Monstres/Eau/Mo_Long_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Shi_Hou_Icon.png" /></a>
+            <a><img class="efrei" title="SHI HOU" src="../image/Monstres/Eau/Shi_Hou_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Rigel_Icon.png" /></a>
+            <a><img class="efrei" title="RIGEL" src="../image/Monstres/Eau/Rigel_Icon.png" /></a>
         </div>
 
 
@@ -169,52 +169,52 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Woosa_Icon.png" /></a>
+            <a><img class="efrei" title="WOOSA" src="../image/Monstres/Eau/Woosa_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Anavel_Icon.png" /></a>
+            <a><img class="efrei" title="ANAVEL" src="../image/Monstres/Eau/Anavel_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Ariel_Icon.png" /></a>
+            <a><img class="efrei" title="ARIEL" src="../image/Monstres/Eau/Ariel_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Bastet_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Emma_Icon.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Galion_Icon.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Megan_Icon.png" /></a>
+            <a><img class="efrei" title="BASTET" src="../image/Monstres/Eau/Bastet_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Rina_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Eau/Konamiya_Icon.png" /></a>
+            <a><img class="efrei" title="EMMA" src="../image/Monstres/Eau/Emma_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Lulu_Icon.png" /></a>
+            <a><img class="efrei" title="GALION" src="../image/Monstres/Eau/Galion_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="MEGAN" src="../image/Monstres/Eau/Megan_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="RINA" src="../image/Monstres/Eau/Rina_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="KONAMIYA" src="../image/Monstres/Eau/Konamiya_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="LULU" src="../image/Monstres/Eau/Lulu_Icon.png" /></a>
 
         </div>
 
@@ -233,26 +233,26 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Verad_Icon.png" /></a>
+            <a><img class="efrei" title="VERAD" src="../image/Monstres/Eau/Verad_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Poseidon_Icon.png" /></a>
+            <a><img class="efrei" title="POSEIDON" src="../image/Monstres/Eau/Poseidon_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Praha_Icon.png" /></a>
+            <a><img class="efrei" title="PRAHA" src="../image/Monstres/Eau/Praha_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Tyron_Icon.png" /></a>
+            <a><img class="efrei" title="TYRON" src="../image/Monstres/Eau/Tyron_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Eau/Orion_Icon.png" /></a>
+            <a><img class="efrei" title="ORION" src="../image/Monstres/Eau/Orion_Icon.png" /></a>
         </div>
 
 
