--- a/A vous de jouer.html
+++ b/A vous de jouer.html
@@ -11,7 +11,7 @@
 <body class="back">
 
     <header>
-        <h1>Summoners war guide</h1>
+        <h1 style="color: rgb(255, 255, 255);">Summoners war guide</h1>
     </header>
 
     <div id="navbar">
