--- a/SRC/Tenebre.html
+++ b/SRC/Tenebre.html
@@ -31,7 +31,18 @@
                     </ul>
                 </li>
 
-                <li><a href="../Stratégie.html">Stratégie</a></li>
+                <li><a>Stratégie</a>
+
+                    <ul>
+                        <li><a href="../SRC/page_strat/evolution.html">Evolution</a></li>
+                        <li><a href="../SRC/page_strat/runes.html">Runes</a></li>
+                        <li><a href="../SRC/page_strat/cairos.html">Cairos</a></li>
+                        <li><a href="../SRC/page_strat/toa.html">TOA/TOAH</a></li>
+                        <li><a href="../SRC/page_strat/raid.html">Raid</a></li>
+
+                    </ul>
+
+                </li>
                 <li><a href="../A vous de jouer.html">Quizz</a></li>
             </ul>
         </nav>
@@ -338,7 +349,7 @@
         }
     </script>
 
-   
+
 
 </body>
 
@@ -352,7 +363,7 @@
     }
     
     .ingenieur1 {
-        margin:15px;
+        margin: 15px;
         height: 100px;
         text-align: center;
     }
