--- a/SRC/page_strat/cairos.html
+++ b/SRC/page_strat/cairos.html
@@ -50,7 +50,7 @@
 
 
 
-    <div class="formation1">
+    <div class="titrepage">
         <h2>Les donjons de Cairos</h2>
     </div>
 
@@ -194,19 +194,6 @@
         justify-content: space-around;
         width: 100%;
         height: 200%;
-    }
-    
-    .formation1 {
-        display: inline-flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-evenly;
-        margin-top: 2%;
-        margin-left: 30%;
-        font-size: 20pt;
-        color: lightgray;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        text-align: center;
     }
 </style>
 
