--- a/SRC/page_strat/evolution.html
+++ b/SRC/page_strat/evolution.html
@@ -49,7 +49,7 @@
     </div>
 
 
-    <div class="formation1">
+    <div class="titrepage">
         <h2>Les évolutions </h2>
     </div>
 
@@ -196,19 +196,6 @@
         justify-content: space-around;
         width: 100%;
         height: 200%;
-    }
-    
-    .formation1 {
-        display: inline-flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-evenly;
-        margin-top: 2%;
-        margin-left: 3%;
-        font-size: 20pt;
-        color: lightgray;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        text-align: center;
     }
 </style>
 
