--- a/SRC/page_strat/toa.html
+++ b/SRC/page_strat/toa.html
@@ -50,9 +50,79 @@
 
 
     <div class="titrepage">
-        <h2>La Tour de L'Ascension</h2>
+        <h2>Le Tribunal d'Ascension</h2>
     </div>
 
+
+    <div class="nousflex">
+        <div class="cairos">
+            <p>
+
+                <h3>
+                    <U>En quoi consiste le Tribunal d'Ascension ?</U>
+                </h3>
+                </br>
+                Le Tribunal d'Ascension est une tour composée de 100 étages qu'il faudra gravir en mode Normal ou "hard". </br>
+                Chaque étage est composé de trois phases où on retrouve durant les deux premières cinq monstres (un trio et un duo de monstres). </br>
+                La dernière dépendra de l'étage en question. En effet, tous les 10 étages on devra vaincre un Boss qui dépendra de la rotation de la TOA (abréviation de Trial of Ascension). </br>
+                On parle de rotation étant donné qu'il y a deux Boss finaux qui s'alternent à l'étage 100 en Normal ou hard. Chaque mois, ces derniers sont inversés.</br>
+                </br>
+
+
+                <h3>
+                    <U>Pourquoi entamer son ascension ?</U>
+                </h3>
+                </br>
+                Les récompenses qu'apporte cette instance aux paliers principaux sont très intéressantes comme on peut le voir ci-dessous. On obtient en outre des cristaux tous les 5 étages, et les étages classiques nous offrent des pierres d'invocations exclusives.
+                </br>
+
+
+                <h3>
+                    <U>Les récompenses du Tribunal</U>
+                </h3>
+                Étage 10 : 50 énergies<br></br>
+                Étage 20 : Arcenmon 3 étoiles max<br></br>
+                Étage 30 : 1 vélin mystique<br></br>
+                Étage 40 : 100 cristaux<br></br>
+                Étage 50 : 2 vélins mystiques<br></br>
+                Étage 60 : Arcenmon 4 étoiles max<br></br>
+                Étage 70 : 1 Devilmon<br></br>
+                Étage 80 : 300 cristaux<br></br>
+                Étage 90 : 1 vélin Lumière et Ténèbres<br></br>
+                Étage 100 : 1 vélin légendaire<br></br>
+                On prend toujours du plaisir à finir ce donjon, aussi parce que ce haut-fait est inscrit dans les archives de notre compte.
+
+
+
+                <h3>
+                    <U>La Team "Passe Partout"</U>
+                </h3>
+                </br>
+                Il faut savoir que toute l'instance TOA en mode Normal peut se faire avec la même équipe, à quelques exceptions près. </br>
+                Les 5 monstres clés à posséder sont : </br>
+                <a><img src="../../image/teamtoa.png"> </a>
+                </br>
+                </br>
+                Pour ce donjon géant, on cherche des stats assez similaires pour chacun de vos monstres, avec au moins 50% de précision sur tout ce beau monde.</br>
+                Les autres prérequis à avoir sont :</br>
+                </br>
+                180 de vitesse</br>
+                22 000 PV</br>
+                800 DEF</br>
+                </br>
+                Bien évidemment, ce sont ici des valeurs indicatives strictement minimales, et qui peuvent ainsi évoluer selon le monstre et selon ce que vous avez en votre possession. Par exemple, Mav pourrait dans l'idéal être doté de 24 000 PV. </br>
+                Si vous n'êtes pas en mesure de valider l'un de ces seuils de stats sur un monstre, essayez d'augmenter une autre en compensation. Par exemple, si vous avez seulement 700 de DEF, essayez d'atteindre les 25 000 PV.
+                </br>
+                </br>
+                <a><img src="../../image/toademo.png"></a>
+            </p>
+
+
+
+
+
+        </div>
+    </div>
 
 
     <footer class="footer"> <input type="button" class="buton" value="Nous" onClick="javascript:document.location.href='../../Nous.html'" /></footer>
@@ -75,5 +145,32 @@
         }
     </script>
 </body>
+
+<style>
+    .cairos {
+        background-color: rgb(43, 51, 78);
+        background-size: cover;
+        width: 75%;
+        height: 100%;
+        text-align: center;
+        margin: auto;
+        margin-top: 100px;
+        margin-bottom: 60px;
+        padding: 50px;
+        border-radius: 5%;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: larger;
+    }
+    
+    .nousflex {
+        display: inline-flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+        height: 200%;
+    }
+</style>
 
 </html>
