--- a/Nous.html
+++ b/Nous.html
@@ -35,11 +35,11 @@
                 <li><a>Stratégie</a>
 
                     <ul>
-                        <li><a href="../Projet-Web/SRC/page_strat/evolution.html">Evolution</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/runes.html">Runes</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/cairos.html">Cairos</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/toa.html">TOA/TOAH</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/raid.html">Raid</a></li>
+                        <li><a href="SRC/page_strat/evolution.html">Evolution</a></li>
+                        <li><a href="SRC/page_strat/runes.html">Runes</a></li>
+                        <li><a href="SRC/page_strat/cairos.html">Cairos</a></li>
+                        <li><a href="SRC/page_strat/toa.html">TOA/TOAH</a></li>
+                        <li><a href="SRC/page_strat/raid.html">Raid</a></li>
 
                     </ul>
 
@@ -72,13 +72,13 @@
             <div id="photo">
                 <p>Arthur Le Negaret</p>
                 </br>
-                <img class="photo " src="../Projet-Web/image/Arthur.png ">
+                <img class="photo " src="image/Arthur.png ">
             </div>
 
             <div id="box" class="box">
                 <p>Box Arthur Le Negaret</p>
                 </br>
-                <img class="photo6 " src="../Projet-Web/image/box arthur.png">
+                <img class="photo6 " src="image/box arthur.png">
             </div>
 
 
@@ -90,13 +90,13 @@
             <div id="photo1">
                 <p>Cédric Calpotura</p>
                 </br>
-                <img class="photo2 " src="../Projet-Web/image/cedric.png">
+                <img class="photo2 " src="image/cedric.png">
             </div>
 
             <div id="box1" class="box">
                 <p>Box Cédric Calpotura</p>
                 </br>
-                <img class="photo6 " src="../Projet-Web/image/box cedric.png">
+                <img class="photo6 " src="image/box cedric.png">
             </div>
 
         </div>
@@ -105,13 +105,13 @@
             <div id="photo3">
                 <p>Adrien Kerezovic</p>
                 </br>
-                <img class="photo " src="../Projet-Web/image/adrien.png">
+                <img class="photo " src="image/adrien.png">
             </div>
 
             <div id="box3" class="box">
                 <p>Box Adrien Kerezovic</p>
                 </br>
-                <img class="photo5 " src="../Projet-Web/image/box adrien.png">
+                <img class="photo5 " src="image/box adrien.png">
             </div>
 
         </div>
