--- a/accueil.html
+++ b/accueil.html
@@ -35,11 +35,11 @@
                 <li><a>Stratégie</a>
 
                     <ul>
-                        <li><a href="../Projet-Web/SRC/page_strat/evolution.html">Evolution</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/runes.html">Runes</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/cairos.html">Cairos</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/toa.html">TOA/TOAH</a></li>
-                        <li><a href="../Projet-Web/SRC/page_strat/raid.html">Raid</a></li>
+                        <li><a href="SRC/page_strat/evolution.html">Evolution</a></li>
+                        <li><a href="SRC/page_strat/runes.html">Runes</a></li>
+                        <li><a href="SRC/page_strat/cairos.html">Cairos</a></li>
+                        <li><a href="SRC/page_strat/toa.html">TOA/TOAH</a></li>
+                        <li><a href="SRC/page_strat/raid.html">Raid</a></li>
 
                     </ul>
 
